--- a/week-1/1_1_introduction_to_python.ipynb
+++ b/week-1/1_1_introduction_to_python.ipynb
@@ -3262,7 +3262,7 @@
     "collapsed": false
    },
    "source": [
-    "**Recursion** is a technique that lets you define a function in terms of itself."
+    "**Recursion** is a technique that lets you define a function in terms of itself. Here is a link to a great video explaining recursion, https://www.youtube.com/watch?v=ngCos392W4w"
    ]
   },
   {
