updated repo structure and reformated plt notebooks

--- a/week-3/exercises/p0_matplotlib-exercises.ipynb
+++ b/week-3/exercises/p0_matplotlib-exercises.ipynb
@@ -6,15 +6,31 @@
    "source": [
     "# Matplotlib Practice\n",
     "\n",
+    "DISCLAIMER: The exercise notebook is a part of a different course, you can find on this [link](https://github.com/mrdbourke/zero-to-mastery-ml/tree/master)\n",
+    "\n",
     "This notebook offers a set of exercises to different tasks with Matplotlib.\n",
     "\n",
     "It should be noted there may be more than one different way to answer a question or complete an exercise.\n",
     "\n",
     "Different tasks will be detailed by comments or text.\n",
     "\n",
-    "For further reference and resources, it's advised to check out the [Matplotlib documentation](https://matplotlib.org/3.1.1/contents.html).\n",
+    "For further reference and resources, it's advised to check out the [Matplotlib documentation](https://matplotlib.org/3.1.1/contents.html), check out the [p0_into_to_visualizations.ipynb](https://github.com/UCLAIS/ml-tutorials-season-5/blob/main/week-3/p0_into_to_visualizations.ipynb) for a comprehensive intro to help you with the exercises\n",
     "\n",
-    "If you're stuck, don't forget, you can always search for a function, for example if you want to create a plot with `plt.subplots()`, search for [`plt.subplots()`](https://www.google.com/search?q=plt.subplots())."
+    "If you're still stuck after consulting the above resources, you can always search for a function, for example if you want to create a plot with `plt.subplots()`, search for [`plt.subplots()`](https://www.google.com/search?q=plt.subplots())."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0.1 Matplotlib Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 0.1.1 Basics"
    ]
   },
   {
@@ -67,6 +83,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 0.1.2 Exercises on Different Types of Plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Subplots\n",
+    "\n",
     "There's another way to create plots with Matplotlib, it's known as the **object-orientated (OO) method**. Let's try it."
    ]
   },
@@ -105,6 +130,7 @@
     "\n",
     "\n",
     "# Prepare data (create two lists of 5 numbers, X & y)\n",
+    "# HINT: Use np.arange or manually input values into a numpy array\n",
     "\n",
     "\n",
     "# Setup figure and axes using plt.subplots()\n",
@@ -143,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an array of 100 evenly spaced numbers between 0 and 100 using NumPy and save it to variable X\n"
+    "# Create an array of 100 evenly spaced numbers between 0 and 100 using NumPy and save it to variable X (np.linspace)\n"
    ]
   },
   {
@@ -159,7 +185,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll start with scatter plots."
+    "##### Scatter Plots\n",
+    "We'll start with scatter plots. Make sure to have a look at our [p0_intro_to_visualizations.ipynb](https://github.com/UCLAIS/ml-tutorials-season-5/blob/main/week-3/p0_into_to_visualizations.ipynb) if you get stuck!"
    ]
   },
   {
@@ -184,7 +211,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How about we try another type of plot? This time let's look at a bar plot. First we'll make some data."
+    "##### Bar Graph\n",
+    "\n",
+    "Make sure to have a look at our [p0_intro_to_visualizations.ipynb](https://github.com/UCLAIS/ml-tutorials-season-5/blob/main/week-3/p0_into_to_visualizations.ipynb) if you get stuck!"
    ]
   },
   {
@@ -223,9 +252,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All this food plotting is making me hungry. But we've got a couple of plots to go.\n",
+    "##### Histogram\n",
     "\n",
-    "Let's see a histogram."
+    "Histograms are not covered in our intro notebook, but you use the [documentation](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html) for plt.hist!\n",
+    "\n",
+    "Also, that was yoummy wasn't it. I hope you selected some of your favourite foods. Now I am hungry. But we've got a couple of plots to go."
    ]
   },
   {
@@ -308,11 +339,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Woah. There's a lot going on there.\n",
+    "## 0.1.3 Further Practice: Matplotlib with Pandas\n",
+    "\n",
+    " The solutions provided in the p0_matplotlib-exercises-solutions.ipynb will be different from what we saw in our p0_intro_to_visualization.ipynb notebook, however you can also implement the solutions as seen in our introductory notebook.\n",
     "\n",
     "Now we've seen how to plot with Matplotlib and data directly. Let's practice using Matplotlib to plot with pandas.\n",
     "\n",
     "First we'll need to import pandas and create a DataFrame work with."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Car Sales Dataset"
    ]
   },
   {
@@ -330,7 +370,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the '../data/car-sales.csv' into a DataFame called car_sales and view\n"
+    "# If you are using google colab, upload the file to colab and\n",
+    "# Import the 'content/car-sales.csv' into a DataFame called car_sales and view\n"
    ]
   },
   {
@@ -372,7 +413,6 @@
    "source": [
     "# Add a column called 'Total Sales' to car_sales which cumulatively adds the 'Price' column\n",
     "\n",
-    "\n",
     "# Add a column called 'Sale Date' which lists a series of successive dates starting from today (your today)\n",
     "\n",
     "# View the car_sales DataFrame\n"
@@ -382,7 +422,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we've got a numeric column (`Total Sales`) and a dates column (`Sale Date`), let's visualize them."
+    "Now we've got a numeric column (`Total Sales`) and a dates column (`Sale Date`), let's visualize them.\n",
+    "\n",
+    "##### Scatter Plot"
    ]
   },
   {
@@ -404,6 +446,13 @@
     "\n",
     "\n",
     "# Create a scatter plot of the 'Odometer (KM)' and 'Price' column using the plot() function\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Bar Graph"
    ]
   },
   {
@@ -431,6 +480,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Histogram"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -452,6 +508,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Heart Disease Dataset\n",
+    "\n",
     "Now we've seen a few examples of plotting directly from DataFrames using the `car_sales` dataset.\n",
     "\n",
     "Let's try using a different dataset."
@@ -463,7 +521,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import \"../data/heart-disease.csv\" and save it to the variable \"heart_disease\"\n"
+    "# Upload the heart-desease.csv which you can find on our github week-3 folder to Google Colab\n",
+    "# If using Colab, import \"contet/heart-disease.csv\" and save it to the variable \"heart_disease\"\n"
    ]
   },
   {
@@ -473,6 +532,13 @@
    "outputs": [],
    "source": [
     "# View the first 10 rows of the heart_disease DataFrame\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Histogram"
    ]
   },
   {
@@ -498,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That plot looks pretty squished. Let's change the figsize."
+    "The plot looks pretty squished. Let's change the figsize."
    ]
   },
   {
@@ -515,13 +581,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Scatter Plot\n",
+    "\n",
     "Now let's try comparing two variables versus the target variable.\n",
     "\n",
     "More specifially we'll see how age and cholesterol combined effect the target in **patients over 50 years old**.\n",
     "\n",
     "For this next challenge, we're going to be replicating the following plot:\n",
     "\n",
-    "<img src=\"../images/matplotlib-heart-disease-chol-age-plot.png\"/>"
+    "<img src=\"../images/matplotlib-heart-disease-chol-age-plot.png\"/>\n",
+    "\n",
+    "If the image does not show up go to our [github page](https://github.com/UCLAIS/ml-tutorials-season-5/tree/main/week-3) and navigate to week-3/images/heart-disease-analysis.png"
    ]
   },
   {
@@ -582,7 +652,9 @@
     "Now the style has been changed, we'll replot the same figure from above and see what it looks like.\n",
     "\n",
     "If you've changed the style correctly, it should look like the following:\n",
-    "<img src=\"../images/matplotlib-heart-disease-chol-age-plot-seaborn-whitegrid.png\"/>\n"
+    "<img src=\"../images/matplotlib-heart-disease-chol-age-plot-seaborn-whitegrid.png\"/>\n",
+    "\n",
+    "If the image does not show up go to our [github page](https://github.com/UCLAIS/ml-tutorials-season-5/tree/main/week-3) and navigate to week-3/images/matplotlib-heart-disease-chol-age-plot-seaborn-whitegrid.png"
    ]
   },
   {
@@ -614,7 +686,9 @@
     "Let's change the `cmap` parameter of `scatter()` as well as the `color` parameter of `axhline()` to fix it.\n",
     "\n",
     "Completing this step correctly should result in a figure which looks like this:\n",
-    "<img src=\"../images/matplotlib-heart-disease-chol-age-plot-cmap-change.png\"/>"
+    "<img src=\"../images/matplotlib-heart-disease-chol-age-plot-cmap-change.png\"/>\n",
+    "\n",
+    "If the image does not show up go to our [github page](https://github.com/UCLAIS/ml-tutorials-season-5/tree/main/week-3) and navigate to week-3/images/matplotlib-heart-disease-chol-age-plot-cmap-change.png"
    ]
   },
   {
