--- a/week-3/exercises/p0_matplotlib-exercises.ipynb
+++ b/week-3/exercises/p0_matplotlib-exercises.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Matplotlib Practice\n",
     "\n",
-    "DISCLAIMER: The exercise notebook is a part of a different course, you can find on this [link](https://github.com/mrdbourke/zero-to-mastery-ml/tree/master)\n",
+    "DISCLAIMER: The exercise notebook was adapted from the [link](https://github.com/mrdbourke/zero-to-mastery-ml/tree/master)\n",
     "\n",
     "This notebook offers a set of exercises to different tasks with Matplotlib.\n",
     "\n",
@@ -422,9 +422,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we've got a numeric column (`Total Sales`) and a dates column (`Sale Date`), let's visualize them.\n",
+    "##### Scatter Plot\n",
     "\n",
-    "##### Scatter Plot"
+    "Now we've got a numeric column (`Total Sales`) and a dates column (`Sale Date`), let's visualize them, using scatter plots."
    ]
   },
   {
