--- a/week-3/solutions/p0_matplotlib-exercises-solutions.ipynb
+++ b/week-3/solutions/p0_matplotlib-exercises-solutions.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matplotlib Practice (solutions)\n",
+    "# Matplotlib Practice (Solutions)\n",
+    "\n",
+    "DISCLAIMER: The exercise notebook was adapted from the [link](https://github.com/mrdbourke/zero-to-mastery-ml/tree/master)\n",
+    "\n",
+    "This notebook offers a set of exercises to different tasks with Matplotlib.\n",
+    "\n",
+    "It should be noted there may be more than one different way to answer a question or complete an exercise.\n",
+    "\n",
+    "Different tasks will be detailed by comments or text.\n",
+    "\n",
+    "For further reference and resources, it's advised to check out the [Matplotlib documentation](https://matplotlib.org/3.1.1/contents.html), check out the [p0_into_to_visualizations.ipynb](https://github.com/UCLAIS/ml-tutorials-season-5/blob/main/week-3/p0_into_to_visualizations.ipynb) for a comprehensive intro to help you with the exercises\n",
+    "\n",
+    "If you're still stuck after consulting the above resources, you can always search for a function, for example if you want to create a plot with `plt.subplots()`, search for [`plt.subplots()`](https://www.google.com/search?q=plt.subplots()).\n",
     "\n",
     "This notebook offers a set of solutions to different tasks with Matplotlib.\n",
     "\n",
@@ -705,11 +717,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Woah. There's a lot going on there.\n",
+    "## 0.1.3 Further Practice: Matplotlib with Pandas\n",
+    "\n",
+    " The solutions provided in the p0_matplotlib-exercises-solutions.ipynb will be different from what we saw in our p0_intro_to_visualization.ipynb notebook, however you can also implement the solutions as seen in our introductory notebook.\n",
     "\n",
     "Now we've seen how to plot with Matplotlib and data directly. Let's practice using Matplotlib to plot with pandas.\n",
     "\n",
     "First we'll need to import pandas and create a DataFrame work with."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Car Sales Dataset"
    ]
   },
   {
@@ -1090,7 +1111,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we've got a numeric column (`Total Sales`) and a dates column (`Sale Date`), let's visualize them."
+    "##### Scatter Plot\n",
+    "\n",
+    "Now we've got a numeric column (`Total Sales`) and a dates column (`Sale Date`), let's visualize them, using scatter plots."
    ]
   },
   {
@@ -1160,6 +1183,13 @@
     "\n",
     "# Create a scatter plot of the 'Odometer (KM)' and 'Price' column using the plot() function\n",
     "car_sales.plot(x=\"Odometer (KM)\", y=\"Price\", kind=\"scatter\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Bar Graph"
    ]
   },
   {
@@ -1235,6 +1265,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Histogram"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1304,6 +1341,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Heart Disease Dataset\n",
+    "\n",
     "Now we've seen a few examples of plotting directly from DataFrames using the `car_sales` dataset.\n",
     "\n",
     "Let's try using a different dataset."
@@ -1571,6 +1610,13 @@
    "source": [
     "# View the first 10 rows of the heart_disease DataFrame\n",
     "heart_disease.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Histogram"
    ]
   },
   {
