Updating rnn notebook

--- a/week-8/rnn.ipynb
+++ b/week-8/rnn.ipynb
@@ -146,8 +146,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we are trying to classify the MNIST dataset using Convolutional Neural Networks (CNNs) we input the whole image into the network. However it is different for Recurrent Neural Networks (RNNs).\n",
+    "\n",
+    "## Understanding Input Size, Sequence Length, and Hidden Size in RNNs\n",
+    "\n",
+    "When working with RNNs, we need to understand three key parameters: **input size**, **sequence length**, and **hidden size**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 1. **Input Size**\n",
+    "- **What It Means:**  \n",
+    "  The input size is the number of features in each element of the sequence.  \n",
+    "\n",
+    "- **MNIST Example:**  \n",
+    "  For the MNIST dataset, we treat each image (28x28 pixels) as a sequence of rows. Each row contains 28 pixels.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2. **Sequence Length**\n",
+    "- **What It Means:**  \n",
+    "  The sequence length is the total number of elements (or chunks) in the sequence.  \n",
+    "\n",
+    "- **MNIST Example:**  \n",
+    "  For MNIST, each image has 28 rows.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 3. **Hidden Size**\n",
+    "- **What It Means:**  \n",
+    "  The hidden size determines how much information the RNN can store at each time step.  \n",
+    "\n",
+    "- **MNIST Example:**  \n",
+    "  At each row of the image, the RNN maintains a memory of 128 features.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,10 +197,10 @@
     "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=100, shuffle=True)\n",
     "test_loader = torch.utils.data.DataLoader(dataset=test_dataset, batch_size=100, shuffle=False)\n",
     "\n",
-    "input_size = 28\n",
-    "sequence_length = 28\n",
-    "hidden_size = 128\n",
-    "num_classes = 10\n",
+    "input_size = 28 # There are 28 rows (there are 28 rows)\n",
+    "sequence_length = 28 # There are 28 pixes in each row\n",
+    "hidden_size = 128 # The size of the hidden layers\n",
+    "num_classes = 10 # 10 digits\n",
     "epochs = 10\n"
    ]
   },
